--- a/October/07.md
+++ b/October/07.md
@@ -37,16 +37,44 @@ implementation and effectiveness into it
 
 **行动指南：**
 
-
 找到你现在正面对的某个困境。问题出在哪里？找到答案后，全面正确地分析这个问题，而后再采取制定决策的步骤。
 
 **摘自：**
 
-
 彼得·德鲁克《卓有成效的管理者》
-
 
 《决策制定的因素》（美国Corpedia德鲁克网上管理课程）
 
-**评注：**
+**评注：给创新一个出发点**
 
+按照常规算法，苹果当前市值约为3800亿美元，谷歌约为2900亿美元，苹果遥遥领先。但是库克掌舵以来，苹果一直没有像iPhone、iPad那样革命性的后续产品。众多的果粉和媒体，时不时就抬死人压活人，感叹库克败了乔布斯辛苦创下的家业。于是，近期有了另外一种非常规的算法，说苹果持有1450亿美元现金，而同期谷歌只有450亿元，一进一出，谷歌的实际业务价值已经超过了苹果。
+
+也不能说果粉和媒体毫无道理，当初iPhone和iPad闪亮登场，融极致的时尚、科技、设计于一身，甩开竞争对手几条街。如今一个三星就让苹果穷于应付，三星也没什么特别招数，就是贴身紧逼，韧劲十足。除了iPad依旧耀眼之外，苹果已经没有什么优势了。
+
+三星的快速逼近情有可原，毕竟电子产品进入成熟期之后，从功能到外观，都会渐渐趋同，这是行业规律，乔布斯在世也无能为力。真正让果粉难以释怀的，是苹果苹果不再引领时尚之先、不再酷了。
+
+从商业的角度考虑看，库克的做法无可非议，理由非常充分。苹果当初花大力气推出的iPod、iPhone、iPad，是公认的创新杰作。但是这些创新之于苹果，犹如春天播种，没有谁能事先保证旱涝保收。而现在，创新的产品彻底成熟，到了收获的秋天，是兑现当初创新的好时节。把iPhone的屏幕加长加宽，把iPad的屏幕缩小缩短，只要市场认可，能赚回大笔的银子，何乐而不为呢。
+
+也许可以说，库克正在快速兑现，那些源自乔布斯时代的创新红利。再不抓紧时间，果实可能烂在地里，当初的创新就变成为他人做嫁衣裳了。
+
+苹果在自家领地大肆采摘的时候，他的竞争对手也在收获，收获的同时还在大力创新。谷歌推出了自动驾驶汽车、智能眼镜、以及日益精致的Android。微软也在全力求变，Windows 8被很多用户抨击，但正是Windows 8，让人看到了微软革新的勇气和决心。
+
+按照以往印象，谷歌和微软属于实力派，推出的产品总是有浓郁的码农味道。而苹果是典型的偶像派，大腕风范加上20多年的技术底蕴，风采逼人。两三年前，用苹果产品感觉是在和国际巨星同台走秀，而用竞争对手的产品，那就是和县城文工团演员挤在市场买菜。
+
+苹果品牌带给用户的那种满足感，是苹果成功的直接原因。极致的用户体验、极致的工业设计，种种不计成本的创新，都是为了带给用户那种与众不同的满足感。
+
+创新，是付出，是改变；是成本，也是风险。企业创新，一定有自己的出发点，一定是多种利益风险的权衡妥协。
+
+苹果以往的成功，依靠的是酷。很自然的想法，是苹果应该坚持酷下去，通过种种创新，变得越来越酷，这也是果粉和媒体的期盼。但是，这未必是最好的选择，也未必是库克的选择。如果苹果坚持做小众产品，坚持走科技奢侈品的道路，要继续酷下去，应该不是难事。对于“烂大街“的大众消费品，要一直酷下去就太难了，甚至根本就不可能做到。
+
+现在更能理解，为什么乔布斯总是选择“封闭”。产品封闭、平台封闭、应用市场封闭，能够封闭的先统统封闭。在一个相对封闭的市场上，更有可能兼顾高端品牌和实际利益。
+
+库克不得不面临选择，一个选择是走大众化路线，让苹果产品彻底“烂大街”。另外一个选择是走高端路线，不再一味追求销量，专注做高端。近期盛传苹果将推出低价iPhone，看来库克倾向于第一种选择。近期苹果给人创新乏力的感觉，原因不在于库克能力不足，而是库克在两个抉择之间犹疑和摇摆。也许库克应该坚定不移地走大众化路线，利用苹果的上下游控制能力，大幅降低苹果产品的售价，彻底占领市场。
+
+难的不是创新，而是战略抉择。真正有了抉择，有了唯一的出发点，创新就有了坚定的方向。凭借苹果的实力，选择任何一个方向，都会有让人惊喜的创新。
+
+个人心目中，苹果是和微软类似的公司，两者都渴望封闭，渴望把消费者赶进一个相对封闭的市场，然后瓮中捉鳖。两家公司的创新，多是在封闭上用力，而且都非常喜欢用专利作为武器，捍卫自己的封闭。两者的差别，在于苹果产品更有品味。
+
+相比之下，谷歌的战略是开放。谷歌的种种创新，都是为更加开放做准备。从地图到汽车、从浏览器到眼镜、从Android到Go，种种创新，无不是为开放战略服务。
+
+封闭和开放，并没有伦理意义上的好坏之分，是企业自己的选择而已。也只有谷歌、苹果、微软这个量级的企业，才需要在封闭和开放两者之间站队。对于大部分企业来说，需要经常反思德鲁克三个经典问题，明确自己的事业是什么、将是什么、应该是什么，才能给创新一个坚实的出发点。
