添加10月9日评注

--- a/October/09.md
+++ b/October/09.md
@@ -29,5 +29,20 @@ Executives face four basic types of problems:
 
 《决策制定的因素》（美国Corpedia德鲁克网上管理课程）
 
-**评注：**
+**评注：商道无情，看百度地图推广**
 
+百度很少推广自己。百度一直是大大小小的企业，操办红白喜事的首选场所，或者说是必选，甚至是边骂边选。百度，已经不知不觉成为中国最大的媒体。中央电视台不去地方台做广告，百度也没有什么动力自我营销。但是近期风云突变，电梯内外铺天盖地都是百度地图的推广：美食、团购、酒店、交通等等，无所不包。最夸张的是双层公交汽车上的地图广告，道路纵横交错，花花绿绿覆盖住整个车身，阳光下异常刺眼。
+
+百度地图大手笔推广，一方面让人感慨百度的财大气粗，另一方面也让人感受到商道的无情。
+
+互联网搜索是一个有垄断基因的行业，一旦当上老大，自己想当老二都难。依托于强大的品牌、雄厚的资金、精良的团队，几乎所有人都认为，百度注定是移动互联网的大赢家。而百度的实际表现却让所有人大跌眼镜，国内移动互联网已经人声鼎沸了，百度还悄无声息。同为传统互联网巨头，腾讯依靠QQ和微信，抢去了半边天；淘宝手机交易和电脑交易的用户比例上升到了1:3；360手机卫士的用户接近3亿。仅仅是从桌面到移动，看似微小的变化，看似同样的搜索行业，境遇已是天上地下。没有谁是天生的宠儿，商机面前，人人平等。
+
+把地图当成移动互联网的突破口，可以说是一步妙招，也可以说是无奈的一招。和百度地图同时推广的，还有高德地图。单从功能上看，普通用户还真分不清两者的区别：你能找到“北京南站”，我能找到“奥运鸟巢”，你免费，我不收钱。高德暗地里也许开心得要死，能和桌面互联网巨无霸同台竞技，挨上几拳没事不说，居然还有还手的余力。如果换一个对手，比如微信、或者手机淘宝，绝大部分人也许连亮剑的心情都没有了。百度选择地图，说明除了地图，已经没有其他可选。新行业、新产品、新对手，同样是新人，同样新起点。没有谁是天生的强者，行业面前，人人平等。
+
+企业在百度上推广，为了取得好的效果，可谓绞尽脑汁，无所不用其极。百度也在此过程中，赚得盆满钵满。而百度地图的推广，声势非常浩大，犹如《武林外传》郭芙蓉使出的那一招：排山倒海。朋友间交流，大家的想法惊人地一致：百度真有钱啊。有钱当然好，能砸出天大的响来。但是落实到这次营销，让人困惑的地方也不少。一个是定位欠精准。就算行内人士，也分不清此地图和彼地图的区别，无形中压低了自己，抬高了对手，帮了竞争对手大忙。
+
+另外一个让人困惑的，是营销细节欠打磨。视频广告制作精良，但是创意太过普通，了无新意。看上十多次，也没有能记住的亮点。最有争议的，也许是那个巨幅车身地图。前几次很容易看成公益广告，以为是公交公司放大复杂地形，方便游客寻路。后来才发现，里面有大大小小、红红绿绿了的好多个“百度”标识。标识虽多，就是不醒目。在自家平台上看惯了形形色色的营销，这次从看客变成演员，全新的角色，需要全新的技能，需要从零开始探索。没有谁是天生的行家，专业面前，人人平等。
+
+人世间有特供蔬菜、特供酒水、特供医疗，却很难有特供空气、特供时间、特供人生。生命的尽头是死亡，有了这个看似无情的铁的规则，金毛狮王谢逊口中的“贼老天”，才让人觉得大体上是公平的。度娘虽美，也怕新人。岁月无情，才有后来人的机会。
+
+商业有自身的铁律，无情似铁，有律可循。有意或无意的违背，都会受到同样的惩罚。也正是因为商道无情，先行者才会警醒，后来者才有希望。
